# aipo_insighter_worker

./: .gitignore  1.py  Dockerfile  Makefile  Readme.md  alembic.ini  configs.py  container.py  load_rabitmq_configs.py  main.py  pyproject.toml  rabitmq_workers_config.yml  server_runer.py
.github/workflows/: prod_insighter_deploy_workflow.yml  stage_insighter_deploy_workflow.yml
application/services/croper/: crop_file.py
application/workers/: summarizer.py  transcriber.py  worker_piplines.py
deploy/local/: docker-compose.yml
deploy/local/database_migration/: insert_data.py  migration.sh
deploy/prod/: docker-compose.yml
deploy/stage/: docker-compose.yml
deploy/stage/database_migration/: migration.sh
domain/enteties/: buisnes_models.py
domain/enteties/IOdataenteties/: queue_enteties.py
domain/enteties/databse_enteties/: sql_ent.py  testdate_insertion_script.py  text_process_models.py
infrastructure/api/openai_api/: whisper.py
infrastructure/database/database_repository/: repositories.py  sql_repo.py
infrastructure/tasks/listen/: listener.py
infrastructure/tasks/send/: sender.py
infrastructure/web/: api_app.py  listen_app.py
migration/: env.py
migration/versions/: 0001_changes.py  0001_initial.py  4775cae84382_database_creation.py  d02473150b31_del_workstatus.py  dc800678df87_indexies.py  ee395199f4d7_initial_migration.py
project_configs/: configs.py  load_rabitmq_configs.py
runners/: server_app_run.py
runners/runer_fuctions/: server_app_runer.py
src/api/: schemas.py
src/api/app/: server_app_run.py
src/api/routers/: assistant_routers.py  database_router.py  exceptions.py  process_router.py  results_routers.py
src/consumption/: fast_streem_app_run.py  runer.py
src/consumption/app/: connector.py  consumer.py  listen_app.py  listener.py  listener_runer.py  runer.py
src/consumption/consumers/: interface.py  summarizer.py  transcriber.py
src/consumption/exeptions/: summarize.py  trinscriber_exeptions.py
src/consumption/queues/: base_processor.py  google_drive.py  s3.py  youtube.py
src/consumption/routers/: exception_handler.py  start_process.py
src/database/: testdate_insertion_script.py
src/database/engine/: session_maker.py
src/database/models/: models_initializer.py
src/database/repositories/: asssistant_repository.py  base_repository.py  interface.py  (+7 more)
src/exceptions/: format_exceptions.py  path_exceptions.py
src/file_manager/: base_file_loader.py  base_file_manager.py  interface.py  media_file_cropper.py  types.py
src/pipelines/: base_pipeline.py  models.py  pipline_factory.py  worker_piplines.py  youtube_pipeline.py
src/publishers/: interface.py  models.py  publisher.py  sender.py
src/utils/: crop_file.py  data_utils.py  logger.py  path_opertaions.py  utils_exceptions.py  wrappers.py
tests/: conftest.py  test_s3_file_manager.py
tests/database_tests/: ins_2.py  testdate_insertion_script.py
(+80 files in other folders)
