[tool.poetry]
name = "insighter"
version = "0.1.0"
description = ""
authors = ["artemprod <artemprod1@gmail.com>", "azamtoiri <azamtoiri@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
docker = "^7.0.0"
environs = "^11.0.0"
aio-pika = "^9.4.1"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"
pydantic = "^2.7.1"
pika = "^1.3.2"
nats-py = "^2.7.2"
pydub = "^0.25.1"
pytube = "^15.0.0"
openai = "^1.25.0"
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0"
langchain = "^0.1.17"
langchain-openai = "^0.1.6"
alembic = "^1.13.1"
pytest = "^8.2.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
loguru = "^0.7.2"
logtail-python = "^0.2.10"
notifiers = "^1.3.3"
paramiko = "^3.4.0"
aiobotocore = "^2.13.0"
types-aiobotocore = {extras = ["essential"], version = "^2.13.0"}
assemblyai = "^0.26.0"
aiormq = "^6.8.0"
pydantic-settings-yaml = "^0.2.0"
psycopg2-binary = "^2.9.9"
retry = "^0.9.2"
pytest-asyncio = "^0.23.7"
faststream = "^0.5.14"
sentry-sdk = {extras = ["fastapi"], version = "^2.7.1"}





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

